--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
     <groupId>com.example</groupId>
     <artifactId>spring-security-basice</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>spring-security-basice</name>
-    <description>spring-security-basice</description>
+    <name>spring-security-basic</name>
+    <description>spring-security-basic</description>
     <properties>
         <java.version>17</java.version>
     </properties>
@@ -33,6 +33,7 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
 
     <build>
