--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.security.user.name = mba
-spring.security.user.password= 0135790
+# spring.security.user.name = mba
+# spring.security.user.password= 0135790
