--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 # spring.security.user.name = mba
 # spring.security.user.password= 0135790
+spring.datasource.url=jdbc:mysql://localhost:3306/2023
+spring.datasource.username=root
+spring.datasource.password=0135790
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
